# egui_wgpu_backend

./: Cargo.toml
src/shader/: egui.wgsl
tests/: validate_shader.rs
