[package]
name = "egui_wgpu_backend"
version = "0.17.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2018"
description = "Backend code to use egui with wgpu."
homepage = "https://github.com/hasenbanck/egui_wgpu_backend"
repository = "https://github.com/hasenbanck/egui_wgpu_backend"
license = "MIT OR Apache-2.0"
readme = "README.md"
resolver = "2"

[features]
default = []
web = []

[dependencies]
egui = { version = "0.17", features = [ "convert_bytemuck" ] }
#wgpu = "0.12"
wgpu = {git="https://github.com/gfx-rs/wgpu.git", rev="3bdef1c"}
bytemuck = "1.7"

[dev-dependencies]
naga = { git="https://github.com/gfx-rs/naga.git", rev="43cd0ec", features=["wgsl-in"] }